# NEXUS3

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.example  AGENTS.md  AGENTS_NEXUS3ARCH.md  AGENTS_NEXUS3CMDCAT.md  AGENTS_NEXUS3CONFIGOPS.md  AGENTS_NEXUS3CTXSEC.md  AGENTS_NEXUS3SKILLSCAT.md  CHANGELOG.md  CLAUDE.md  DISPLAY-RESEARCH.md  DISPLAY-SIMPLIFICATION-PLAN.md  LICENSE  MCP_IMPLEMENTATION_PLAN.md  README.md  REMEDIATION_PLAN.md  nexus-aliases.sh  package-lock.json  pyproject.toml  remembered_code.txt
.claude-notes/: consolidated-refactor-plan.md  path-resolver-plan.md  read-write-paths-plan.md
code-review/: SUMMARY.md  concept-async-patterns.md  concept-dependency-injection.md  concept-error-handling.md  concept-security.md  concept-test-coverage.md  concept-type-safety.md  flow-http-rpc.md  flow-logging.md  flow-multi-agent.md  flow-repl.md  flow-tool-execution.md  module-cli.md  module-client.md  module-config.md  module-context.md  module-core.md  module-display.md  module-provider.md  module-rpc.md  module-session.md  module-skill.md
docs/: CLIPBOARD-PLAN.md  COMMAND-HELP.md  CONCAT-FILES-PLAN.md  CONTEXT_MANAGEMENT_PLAN.md  EDIT-PATCH-PLAN.md  EXAMPLE-PLAN-COMPLEX.md  EXAMPLE-PLAN-SIMPLE.md  GITLAB-TOOLS-PLAN.md  GIT_SKILL_PLAN.md  MCP-IMPLEMENTATION-GAPS.md  MCP-LIVE-TESTING-GUIDE.md  MCP-REMAINING-PHASES.md  REGEX_REPLACE_PLAN.md  SANDBOXED-PARENT-SEND-PLAN.md  SKILL_ENHANCEMENT_PLAN.md  WINDOWS-LIVE-TESTING-GUIDE.md  WINDOWS-NATIVE-COMPATIBILITY.md  WINDOWS-SHELL-COMPATIBILITY.md  WINDOWS-TROUBLESHOOTING.md  YOLO-SAFETY-PLAN.md  streaming-fix-plan.md
docs/multi-client-sync/: README.md  phase-0-event-contract.md  phase-1-sse-endpoint.md  phase-2-publish-events.md  phase-3-synced-client.md  phase-4-unified-events.md  phase-5-shared-history.md  phase-6-hardening.md  phase-7-confirmations.md
docs/plans/: AGENTS-CLAUDE-HANDOFF-RESTRUCTURE-PLAN-2026-03-12.md  ARCH-A-AUTH-KERNEL-PLAN-2026-03-02.md  ARCH-A-AUTH-REQUEST-MODEL-V2-PLAN-2026-03-05.md  ARCH-B-CAPABILITY-TOKENS-PLAN-2026-03-02.md  ARCH-C-REQUEST-CONTEXT-PLAN-2026-03-02.md  ARCH-C-SERVICE-CONTAINER-IMMUTABILITY-PLAN-2026-03-05.md  ARCH-D-FILESYSTEM-GATEWAY-PLAN-2026-03-02.md  ARCH-E-CONTEXT-COMPILER-GRAPH-PLAN-2026-03-02.md  ARCH-F-PATCH-AST-BYTE-FIDELITY-PLAN-2026-03-02.md  ARCH-G-TERMINAL-SAFE-SINK-PLAN-2026-03-02.md  ARCH-H-RPC-ERROR-SHIM-RETIREMENT-PLAN-2026-03-05.md  ARCH-H-STRICT-SCHEMA-GATES-PLAN-2026-03-02.md  ARCH-INVESTIGATION-2026-03-02.md  ARCH-MILESTONE-SCHEDULE-2026-03-02.md  BROAD-TOOL-FAMILY-AUDIT-AND-HARDENING-PLAN-2026-03-10.md  CLIPBOARD-PLAN-V2.md  CLIPBOARD-PLAN.md  CONCAT-FILES-PLAN.md  CONFIG-LOADING-FIX-PLAN.md  DEPENDENCY-LICENSE-AND-TELEMETRY-AUDIT-PLAN-2026-03-10.md  DOCS-COMPLETENESS-AND-CORRECTNESS-AUDIT-PLAN-2026-03-12.md  DOUBLE-SPINNER-FIX-PLAN.md  DRY-CLEANUP-PLAN.md  EDIT-FILE-ERROR-PLAN.md  EDIT-FILE-SYNTAX-SIMPLIFICATION-PLAN-2026-04-07.md  EDIT-LINES-BATCH-AND-TOOL-CONTRACT-ALIGNMENT-PLAN-2026-03-10.md  EMPTY-STREAM-FIX-PLAN.md  EXEC-AND-SHELL-TOOL-REDESIGN-PLAN-2026-03-11.md  FILE-EDIT-TOOL-CONTRACT-HARMONIZATION-PLAN-2026-03-10.md  GIT-AND-OUTLINE-CORRECTNESS-AUDIT-PLAN-2026-03-11.md  GITLAB-TOOLS-PLAN.md  IDE-HARDENING-PLAN.md  IDE-INTEGRATION-PLAN.md  IMPROVEMENTS-BACKLOG.md  INSTRUCTION-FILES-PLAN.md  LINUX-COMPATIBILITY-AUDIT-PLAN-2026-03-12.md  MACOS-COMPATIBILITY-AUDIT-PLAN-2026-03-12.md  MCP-DYNAMIC-TOOL-BOUNDARY-AUDIT-PLAN-2026-03-10.md  MCP-RESULT-VISIBILITY-PLAN-2026-03-11.md  MCP-SERVER-PLAN.md  (+48 more)
docs/references/: CODING_AGENT_PLAYBOOK.md  GITHUB-REFERENCE.md  GITLAB-REFERENCE.md  MCP-SERVER-PYTHON-101.md  MCP-SERVER-PYTHON-202.md  TOOL-SURFACE-DESIGN-GUIDELINES.md  concat_files.py  concat_files.sh
docs/reviews/: CODEX-NEXUS3-REVIEW-MASTER-FINAL-2026-03-02.md  DEPENDENCY-LICENSE-AND-TELEMETRY-AUDIT-2026-03-10.md  README.md
docs/terminal-unification/: COMMAND-PARITY.md  GPT-HANDOVER.md  GPT-IMPLEMENTATIONS.md  README.md  REFACTOR-PLAN.md  RPC-SCHEMA.md
docs/testing/: IDE-INTEGRATION-LIVE-TESTING.md  POST-M4-VALIDATION-RUNBOOK.md  SANDBOXED-PARENT-SEND-LIVE-TESTING.md  WINDOWS-LIVE-TESTING-GUIDE.md  YOLO-SAFETY-LIVE-TESTING.md
docs/validation/: README.md
editors/vscode/: README.md  package.json
nexus3/: README.md  __init__.py  __main__.py  client.py
nexus3/cli/: README.md  __init__.py  arg_parser.py  (+21 more)
scripts/: diagnose-empty-stream.sh
tests/: __init__.py  conftest.py
(+580 files in other folders)
