[project]
name = "nexus3"
version = "0.1.0"
description = "A secure, multi-agent CLI framework for AI-powered software engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Incurian", email = "incurian@users.noreply.github.com"},
]
keywords = ["ai", "agent", "cli", "llm", "automation", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "jsonschema>=4.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "watchfiles>=0.21.0",
]
# Minimal CI dependencies (no watchfiles needed)
ci = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/Incurian/NEXUS3"
Repository = "https://github.com/Incurian/NEXUS3.git"
Issues = "https://github.com/Incurian/NEXUS3/issues"

[project.scripts]
nexus3 = "nexus3.cli.repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
# CI-friendly: fail on any error
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# CI-friendly options
addopts = [
    "-ra",              # Show extra test summary for all except passed
    "--strict-markers", # Error on unknown markers
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "windows: tests that only run on Windows",
    "windows_mock: tests that mock Windows behavior (run everywhere)",
    "unix_only: tests that only run on Unix",
]

[tool.coverage.run]
source = ["nexus3"]
branch = true
omit = [
    "nexus3/__main__.py",
    "nexus3/mcp/test_server/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true
